--- a/HelloStudents/HelloStudents.csproj
+++ b/HelloStudents/HelloStudents.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student3099Ham.cs" />
     <Compile Include="StudentBase.cs" />
+    <Compile Include="Student3118Choi.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
