Student3116Jo 통합 버그 해결 누락된 Student3116JO 프로젝트 등록 및 Students3116Jo -> Student3116Jo ; 누락 추가

--- a/HelloStudents/HelloStudents.csproj
+++ b/HelloStudents/HelloStudents.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>HelloStudents.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -48,6 +51,7 @@
     <Compile Include="Student3099Ham.cs" />
     <Compile Include="Student3108Kim.cs" />
     <Compile Include="Student3103Kim.cs" />
+    <Compile Include="Student3116JO.cs" />
     <Compile Include="Student3199Ham.cs" />
     <Compile Include="StudentBase.cs" />
   </ItemGroup>
