--- a/HelloStudents/HelloStudents.csproj
+++ b/HelloStudents/HelloStudents.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>HelloStudents</RootNamespace>
     <AssemblyName>HelloStudents</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -48,7 +48,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Student3109Kim.cs" />
-    <Compile Include="MyModule1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student3099Ham.cs" />
@@ -60,7 +59,6 @@
     <Compile Include="Student3107Kim.cs" />
     <Compile Include="Student3112Oh.cs" />
     <Compile Include="Student3117Choi.cs" />
-    <Compile Include="Student3113Lee.cs" />
     <Compile Include="Student3105Kim.cs" />
     <Compile Include="Student3115Lee.cs" />
     <Compile Include="Student3108Kim.cs" />
@@ -70,6 +68,7 @@
     <Compile Include="Student3209Moon.cs" />
     <Compile Include="Student3214Lee.cs" />
     <Compile Include="Student3211Son.cs" />
+    <Compile Include="Student3214Lim.cs" />
     <Compile Include="StudentBase.cs" />
     <Compile Include="Student3118Choi.cs" />
   </ItemGroup>
